prod build to deply on heroku

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "material-project",
   "version": "0.0.0",
+  "main":"server.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
