--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "heroku-post-build": "npm run build"
+    "postinstall": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
